Add global section-title styles

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -37,3 +37,10 @@ img {
   background-position: center;
   background-size: cover;
 }
+
+.section-title {
+  margin-bottom: 30px;
+  span {
+    color: #ff8500;
+  }
+}
