--- a/src/components/order/order.scss
+++ b/src/components/order/order.scss
@@ -9,12 +9,13 @@
 
   h3 {
     font-weight: 400;
+    font-size: 22px;
   }
 
   &-inner {
     display: grid;
     grid-template-columns: 1fr;
-    grid-row-gap: 30px;
+    grid-row-gap: 40px;
     grid-column-gap: 20px;
 
     @media screen and (min-width: 600px) {
@@ -23,10 +24,12 @@
   }
 
   &-col {
-    padding: 10px 15px;
+    padding: 30px 15px;
+    line-height: 1.5;
+    font-size: 18px;
     border-radius: 15px;
     background-color: #fff;
-    box-shadow: 0 5px 3px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 5px 3px rgba(0, 0, 0, 0.3);
   }
 
   &-col-title {
