Add global section paddings

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -40,6 +40,11 @@ img {
   background-size: cover;
 }
 
+.section {
+  padding-top: 75px;
+  padding-bottom: 60px;
+}
+
 .section-title {
   margin-bottom: 30px;
   span {
