Add charter info

--- a/src/components/charter/charter.scss
+++ b/src/components/charter/charter.scss
@@ -32,6 +32,7 @@
 
   &-download {
     text-align: center;
+    margin-bottom: 25px;
   }
 
   &-link {
@@ -44,8 +45,33 @@
     transition: all 0.2s ease;
 
     &:hover {
-      background-color: #fff;
-      color: #663399;
+      background-color: #663399;
+      color: #fff;
+    }
+  }
+
+  &-info {
+    width: 95%;
+    margin: 0 auto 30px;
+    padding: 20px 30px;
+    background-color: #fff;
+    color: #000;
+    border-radius: 10px;
+    box-shadow: 0 5px 3px rgba(0, 0, 0, 0.3);
+
+    h3 {
+      margin-bottom: 25px;
+      text-align: center;
+      font-size: 24px;
+    }
+
+    ol {
+      list-style-type: upper-roman;
+      margin-bottom: 40px;
+    }
+
+    li {
+      margin-bottom: 15px;
     }
   }
 }
