--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -51,3 +51,25 @@ img {
     color: #ff8500;
   }
 }
+
+.stage-top {
+  text-align: center;
+}
+
+.stage-title {
+  position: relative;
+  display: inline-block;
+  padding: 15px 0 15px 70px;
+  font-size: 42px;
+  color: #154599;
+
+  &::before {
+    content: "";
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    top: 8px;
+    left: 0;
+    background-image: url("../../static/img/icon-step.svg");
+  }
+}
