--- a/src/components/stage1/stage1.scss
+++ b/src/components/stage1/stage1.scss
@@ -1,9 +1,8 @@
 .stage-1 {
   // background-color: #f7f8fa;
   h2 {
-    font-size: 44px;
+    font-size: 1.5em;
     margin-bottom: 30px;
-    text-align: center;
 
     @media screen and (max-width: 768px) {
       font-size: 28px;
