--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -86,3 +86,11 @@ img {
   background-color: #154599;
   box-shadow: 0 5px 3px rgba(0, 0, 0, 0.3);
 }
+
+.bg-light {
+  background-color: #fff;
+}
+
+.bg-dark {
+  background-color: #f7f8fa;
+}
