--- a/src/components/simpleStage/stage.scss
+++ b/src/components/simpleStage/stage.scss
@@ -1,4 +1,5 @@
 .simple-stage {
+  padding-bottom: 120px;
   &-title {
     margin-bottom: 20px;
   }
@@ -9,6 +10,7 @@
     padding-top: 40px;
     padding-bottom: 40px;
     padding-left: 30px;
+    padding-right: 10px;
     font-size: 18px;
     line-height: 1.5;
     text-align: left;
